--- a/Appveyor.yml
+++ b/Appveyor.yml
@@ -1,9 +1,10 @@
-configuration:Release
+configuration: Release
+
 # restore NuGet packages before running MSBuild
 before_build:
    - nuget restore
 
-# package Web Appplication project for Web Deploy
+# package Web Application project for Web Deploy
 build:
   verbosity: minimal
   publish_wap: true
